# IFM_Camera

./: CMakeLists.txt  DepthToXYZ.m  IFM_distortion.fig  README.TXT  kinect.m  o3d303_analysis.m  o3d303_analysis.m~  plotData_1_Straight.m  plotIFM.m
Data/: distances_wall_0.txt  distances_wall_1.txt  distances_wall_10.txt  distances_wall_11.txt  distances_wall_12.txt  distances_wall_13.txt  distances_wall_14.txt  distances_wall_15.txt  distances_wall_16.txt  distances_wall_17.txt  distances_wall_18.txt  distances_wall_19.txt  distances_wall_2.txt  distances_wall_20.txt  distances_wall_21.txt  distances_wall_22.txt  distances_wall_23.txt  distances_wall_24.txt  distances_wall_25.txt  distances_wall_26.txt  distances_wall_27.txt  distances_wall_28.txt  distances_wall_29.txt  distances_wall_3.txt  distances_wall_30.txt  distances_wall_31.txt  distances_wall_32.txt  distances_wall_33.txt  distances_wall_34.txt  distances_wall_35.txt  distances_wall_36.txt  distances_wall_37.txt  distances_wall_38.txt  distances_wall_39.txt  distances_wall_4.txt  distances_wall_5.txt  distances_wall_6.txt  distances_wall_7.txt  distances_wall_8.txt  distances_wall_9.txt  (+81 more)
frame_rate_test/: CMakeLists.txt  README.TXT
frame_rate_test/src/: frame_rate_test.cpp
processing_plugin/: CMakeLists.txt
processing_plugin/src/: o3d3xxProc.cpp
samples/: CMakeLists.txt
samples/include/: sample.hpp
samples/src/: sample.cpp  sample_basic_functionalities.cpp  sample_data_configuration.cpp  sample_filter_functions.cpp  sample_imager_functions.cpp  sample_multicamera_connect.cpp  sample_pcic_commands.cpp
source_plugin/: CMakeLists.txt
source_plugin/include/: o3d3xx_camera.hpp  o3d3xx_defines.hpp
source_plugin/src/: clientsocket.cpp  o3d3xxSrc.cpp  o3d3xx_camera.cpp
tests/: CMakeLists.txt
tests/include/: o3d3xx_tests.hpp
tests/src/: o3d3xx_camera_tests.cpp  o3d3xx_filter_tests.cpp  o3d3xx_imager_tests.cpp
